[gd_scene load_steps=9 format=2]

[ext_resource path="res://resources/themes/base_theme.tres" type="Theme" id=1]
[ext_resource path="res://ui/menus/shop/item_description.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/menus/shop/button_with_icon.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/menus/shop/shop_item.gd" type="Script" id=4]
[ext_resource path="res://resources/themes/panel_button_theme.tres" type="Theme" id=5]
[ext_resource path="res://resources/fonts/actual/base/font_small_button.tres" type="DynamicFont" id=6]
[ext_resource path="res://ui/menus/global/my_menu_button.gd" type="Script" id=7]
[ext_resource path="res://items/global/locked_icon.png" type="Texture" id=8]

[node name="ShopItem" type="VBoxContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -271.0
margin_top = -328.0
margin_right = 70.0
margin_bottom = 76.0
rect_min_size = Vector2( 300, 0 )
theme = ExtResource( 1 )
custom_constants/separation = 10
script = ExtResource( 4 )

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_right = 351.0
margin_bottom = 475.0
rect_min_size = Vector2( 0, 475 )

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 346.0
margin_bottom = 470.0
rect_clip_content = true
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 331.0
margin_bottom = 455.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemDescription" parent="PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 321.0
margin_bottom = 96.0
custom_constants/separation = 15

[node name="EmptySpace" type="ColorRect" parent="PanelContainer/MarginContainer/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 100.0
margin_right = 321.0
margin_bottom = 379.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuyButton" parent="PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_left = 160.0
margin_top = 383.0
margin_right = 160.0
margin_bottom = 445.0
size_flags_horizontal = 4
theme = ExtResource( 5 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_top = 485.0
margin_right = 351.0
margin_bottom = 536.0
alignment = 1

[node name="LockButton" type="Button" parent="HBoxContainer"]
margin_left = 85.0
margin_right = 265.0
margin_bottom = 51.0
focus_mode = 0
custom_fonts/font = ExtResource( 6 )
toggle_mode = true
text = "MENU_LOCK"
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LockIcon" type="TextureRect" parent="HBoxContainer"]
visible = false
margin_left = 235.0
margin_right = 299.0
margin_bottom = 58.0
rect_min_size = Vector2( 64, 0 )
texture = ExtResource( 8 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_exited_category" from="PanelContainer/MarginContainer/VBoxContainer/ItemDescription" to="." method="_on_ItemDescription_mouse_exited_category"]
[connection signal="mouse_hovered_category" from="PanelContainer/MarginContainer/VBoxContainer/ItemDescription" to="." method="_on_ItemDescription_mouse_hovered_category"]
[connection signal="focus_entered" from="PanelContainer/MarginContainer/VBoxContainer/BuyButton" to="." method="_on_BuyButton_focus_entered"]
[connection signal="focus_exited" from="PanelContainer/MarginContainer/VBoxContainer/BuyButton" to="." method="_on_BuyButton_focus_exited"]
[connection signal="mouse_entered" from="PanelContainer/MarginContainer/VBoxContainer/BuyButton" to="." method="_on_BuyButton_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer/MarginContainer/VBoxContainer/BuyButton" to="." method="_on_BuyButton_mouse_exited"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/BuyButton" to="." method="_on_BuyButton_pressed" flags=3]
[connection signal="toggled" from="HBoxContainer/LockButton" to="." method="_on_LockButton_toggled"]
